tests/ui/type-alias-impl-trait/issue-60564.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-60564.rs:19:34
   |
LL |     fn iter_bits(self, n: u8) -> Self::BitsIter {
   |                                  ^^^^^^^^^^^^^^ argument `u8` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/issue-60564.rs:8:30
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0792]: expected generic type parameter, found `u8`
  --> $DIR/issue-60564.rs:21:9
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         - this generic parameter must be used with a generic type parameter
...
LL |         (0u8..n).rev().map(move |shift| ((self >> T::from(shift)) & T::from(1)).try_into().unwrap())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
